tests/NormalTests/paczka1/small_fuzzy/30696645.err
Error in line 8: JsP4iyl A367 66,4
Error in line 6: QCuAAg S525 33,0
Error in line 11: QCuAAg A367 41,4
